# PCCArena

./: .gitignore  LICENSE  README.md  ds_preparation.py  env_setup.sh  evaluate_pc.py  experiments  log_test.py  logging.conf  pythontest.py  run_all.py  run_experiments.py  run_experiments_short.py  run_one.py  setup.py  setup_env_ds.sh  test.drc  test.patch  testpython.py
algorithms/PCL_compression/: CMakeLists.txt  PCL_compression.cpp  run_pcl.py
algorithms/draco_scripts/: run_draco.py
algorithms/mpeg-pcc-tmc13-v6_scripts/: run_tmc13.py
algorithms/pcc_geo_cnn_scripts/: run_geo_cnn.py
algs_wrapper/: Draco.py  GPCC.py  GeoCNNv1.py  GeoCNNv2.py  PCGCv1.py  PCGCv2.py  VPCC.py  base.py  draco.py  geocnn_v1.py  geocnn_v2.py  gpcc.py  pcgc_v1.py  pcgc_v2.py  vpcc.py
cfgs/: datasets.yml  draco.yml  geocnn_v2.yml  gpcc.yml  pcgc_v1.yml  pcgc_v2.yml  vpcc.yml
cfgs/algs/: Draco.yml  GPCC.yml  GeoCNNv1.yml  GeoCNNv2.yml  PCGCv1.yml  PCGCv2.yml  VPCC.yml  draco.yml  gpcc.yml  pcgc_v2.yml
cfgs/conda_env/: GeoCNNv1.yml  GeoCNNv2.yml  PCGCv1.yml  PCGCv2.yml  Template_GPU.yml  geocnn_v1.yml  geocnn_v2.yml  pcc_arena.yml  pcgc_v1.yml  pcgc_v2.yml
cfgs/draco/: draco_r1.yml  draco_r5.yml
cfgs/gpcc/: gpcc_r1.yml  gpcc_r3.yml  gpcc_r5.yml
ckpts/: c8_a025_32000.pth  c8_a05_32000.pth  c8_a10_32000.pth  c8_a1_32000.pth  c8_a2_32000.pth  c8_a4_32000.pth  c8_a6_32000.pth
evaluator/: cal_avg_std.py  evaluate_pc.py  evaluate_pc_video.py  evaluate_summary.py  evaluator.py  find_max.py  gdiam_wrapper.py  libgdiam-1.0.3.patch  metrics.py  mpeg-pcc-dmetric.patch  summary.py  summary_all_class.py
evaluator/Chamfer-Distance-API/: chamfer_distance_api.py
evaluator/dependencies/: gdiam_wrapper.py
evaluator/geo_dist/: CMakeLists.txt  README.md  geometric_distortion.h
evaluator/libgdiam-1.0.3/: gdiam_test  gdiam_test.cpp  test.xyz
evaluator/metrics/: PointBasedMetrics.py  ProjectionBasedMetrics.py
evaluator/mpeg-pcc-dmetric-master/source/: CMakeLists.txt  main.cpp  pcc_distortion.cpp  pcc_distortion.hpp
libs/: metric_base.py
test/dec/: longdress_vox10_1051.ply  longdress_vox10_1052.ply  longdress_vox10_1053.ply  longdress_vox10_1054.ply  longdress_vox10_1055.ply  longdress_vox10_1056.ply  longdress_vox10_1057.ply  longdress_vox10_1058.ply  longdress_vox10_1059.ply
utils/: custom_visualization.py  dataset_preprocessing.py  ds_mesh2pc.py  file_io.py  fix_off_format.py  gpu_utils.py  mesh2pc.py  pc_normalize.py  pc_utils.py  processing.py  random_select.py  run_cmds.py  shapenet_structure.py
(+67 files in other folders)
